--- a/static/styles.css
+++ b/static/styles.css
@@ -15,3 +15,27 @@
     background-color: #e2e6ea;
     border-radius: 4px;
 }
+.position-relative {
+    margin-bottom: 1.5rem;
+}
+
+/*description span*/
+.description {
+    display: none;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    z-index: 10;
+    white-space: nowrap;
+}
+
+input:hover + .description,
+select:hover + .description {
+    display: block; /* Show on hover */
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 100%;
+    margin-bottom: 5px;
+}
