about.html - small fixes

--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
             <!-- first card beginning-->
             <div class="col">
                 <div class="card text-center border-0">
-                    <img src="https://avatars.githubusercontent.com/u/84537728" style="width: 200px;"
+                    <img src="https://avatars.githubusercontent.com/u/84537728" style="width: 150px;"
                          class="card-img-top rounded-circle mx-auto mt-3" alt="Team Member">
                     <div class="card-body">
                         <h5 class="card-title">Fabian Zbrański</h5>
@@ -31,8 +31,8 @@
             <!-- first card end.
             Three of the same thing >  -->
             <div class="col">
-                <div class="card text-center">
-                    <img src="https://avatars.githubusercontent.com/u/5730766" style="width: 200px;"
+                <div class="card text-center border-0">
+                    <img src="https://avatars.githubusercontent.com/u/5730766" style="width: 150px;"
                          class="card-img-top rounded-circle mx-auto mt-3" alt="Team Member">
                     <div class="card-body">
                         <h5 class="card-title">Antoni Siek</h5>
@@ -41,8 +41,9 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card text-center">
-                    <img src="" style="width: 200px;" class="card-img-top rounded-circle mx-auto mt-3"
+                <div class="card text-center border-0">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png" style="width: 150px;"
+                         class="card-img-top rounded-circle mx-auto mt-3"
                          alt="Team Member">
                     <div class="card-body">
                         <h5 class="card-title">Alan Giermasz</h5>
@@ -51,8 +52,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card text-center">
-                    <img src="https://avatars.githubusercontent.com/u/102504342" style="width: 200px;"
+                <div class="card text-center border-0">
+                    <img src="https://avatars.githubusercontent.com/u/102504342" style="width: 150px;"
                          class="card-img-top rounded-circle mx-auto mt-3" alt="Team Member">
                     <div class="card-body">
                         <h5 class="card-title">Kiryl Babko</h5>
@@ -64,3 +65,5 @@
     </div>
 </div>
 {% endblock %}
+Added pages contents/styling.
+![image](https://github.com/user-attachments/assets/545c1402-ebf6-4d5e-86ee-1530afa36964)
